--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
 
     <div class="photo">
         <img width="80%"
-                src="\homepage.jpg"
-                srcset="\homepage.jpg 500w, \homepage.jpg 400w" >
+                src=".\homepage.jpg"
+                srcset=".\homepage.jpg 500w, .\homepage.jpg 400w" >
     </div>
 
 
