--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
 
     <div class="photo">
         <img width="80%"
-                src=".\homepage.jpg"
-                srcset=".\homepage.jpg 500w, .\homepage.jpg 400w" >
+                src="https://github.com/S-R-J/ashisshh/blob/main/homepage.jpg"
+                srcset="https://github.com/S-R-J/ashisshh/blob/main/homepage.jpg 500w, https://github.com/S-R-J/ashisshh/blob/main/homepage.jpg 400w" >
     </div>
 
 
