--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
 
     <div class="photo">
         <img width="80%"
-                src="./homepage.jpg"
-                srcset="./homepage.jpg 500w, ./homepage.jpg 400w" >
+                src="./home2.png"
+                srcset="./home2.png 500w, ./home2.png 400w" >
     </div>
 
 
