--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
     <br><br><br>
     <div class="hlv">
        
-        <img src="/hlv.jpg" alt="" height="200px">
+        <img src="./hlv.png" alt="" height="200px">
         <div class="info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia aspernatur qui aperiam nostrum facere facilis voluptates iure! Ad, cum iure.</div>
         <div class="hlv-text" onclick="window.location.href = 'hlvcalculate.html'">HLV Calculator</div>
     </div>
